# birgus

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: release.yml
src/birgus/: __init__.py  classes.py  exception_hooks.py  exception_report.capnp  exception_report.py
src/birgus/cli/: __main__.py
src/birgus/temporal/: activities.py  interceptors.py
src/birgus/transports/: __init__.py  azure_blob_storage.py  base.py  local_file.py
src/birgus/viewer/: __main__.py  app.py  config.py
tests/: conftest.py  test_azure_blob_storage.py  test_hooks.py  test_temporal.py
tests/integration/: test_azure_blob_storage.py
tests/unit/: test_azure_blob_storage.py  test_hooks.py  test_temporal.py
