[project]
name = "birgus"
version = "0.1.0"
description = "A lightweight, low-friction library for capturing tracebacks in Python applications."
readme = "README.md"
authors = [
    { name = "Nimrod Abing", email = "nimrod.abing@gmail.com" }
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pycapnp>=2.2.3",
]

[project.optional-dependencies]
temporalio = [
    "temporalio>=1.29.0",
]
requests = [
    "requests>=2.34.2",
]
httpx = [
    "httpx>=0.28.1",
]
aiohttp = [
    "aiohttp>=3.14.1",
]
azure-storage = [
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.30.0",
]

[tool.uv.build-backend]
module-name = "birgus"
module-root = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]
